# ozmarenamer

./: .gitignore  __init__.py  __main__.py  main.py  ozma_cli.py  ozma_daemon.py  pyproject.toml  readme.md  requirements.txt
classes/: manager.py  media.py  watchers.py
configure/: __init__.py
linux_scripts/: rsync.sh
ozma/: __init__.py  readme.md
ozma/classes/: __init__.py  episode.py  manager.py  movie.py
ozma/setup/: __init__.py  custom_loggers.py  media_extensions.json
ozma/tools/: IMDB.py  __init__.py  img_scraper.py  lastfm.py  movie_scraper.py  muta.py  plex.py  transmission.py  tv_wikipedia.py  wikipedia.py
tools/: IMDB.py  __init__.py  imdb.py  plex.py
trans_scripts/: disable_throttle.py  enable_throttle.py
