[tool.poetry]
name = "ozma_renamer"
version = "4.0.0"
description = "A renamer for your media files"
authors = ["Landon Wark <lando.wark@gmail.com>"]
readme = "docs/source/index.rst"

packages = [{include = "src/ozma"}]

[tool.poetry.dependencies]
python = "^3.10"
Sphinx = { version = "^4.2.0", optional = true }
sphinx-rtd-theme = { version = "^1.0.0", optional = true }
sphinxcontrib-napoleon = { version = "^0.7", optional = true }
sphinx-click = { version = "^4.3.0", optional = true }
PyYAML = "^6.0"
click = "^8.1.3"
pytest = "^7.2.0"
pysmb = "^1.2.8"
plexapi = "^4.13.1"
fuzzywuzzy = "^0.18.0"
cinemagoer = "^2022.12.4"
pylast = "^5.1.0"
mutagen = "^1.46.0"
jinja2 = "^3.1.2"
python-levenshtein = "^0.20.8"
watchdog = "^2.2.1"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon", "sphinx-click"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
